test/netlist/error/arg-fun-int.bop
A<fun>(a) = b
where
  b = fun(a);
end where;
